# mcp-sync

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  release.yml  test-release.yml
mcp_sync/: __init__.py  client_definitions.json  config.py  main.py  sync.py
mcp_sync/clients/: __init__.py  executor.py  repository.py
mcp_sync/config/: __init__.py  models.py  settings.py
scripts/: setup.sh
tests/: test_client_management.py  test_config_models.py  test_init.py  test_integration.py  test_main.py  test_settings.py  test_sync.py
