[project]
name = "mcp-sync"
version = "0.4.0"
description = "Sync MCP (Model Context Protocol) configurations across AI tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dynaconf>=3.2.11",
    "platformdirs>=4.3.8",
    "pydantic>=2.11.7",
]
authors = [
    {name = "ztripez", email = "ztripez@users.noreply.github.com"},
]
license = {text = "MIT"}
keywords = ["mcp", "model-context-protocol", "ai", "sync", "configuration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[project.scripts]
mcp-sync = "mcp_sync.main:main"

[project.urls]
Homepage = "https://github.com/ztripez/mcp-sync"
Repository = "https://github.com/ztripez/mcp-sync"
Issues = "https://github.com/ztripez/mcp-sync/issues"
Documentation = "https://github.com/ztripez/mcp-sync#readme"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PT"]
ignore = ["S101"]  # Allow assert statements

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S108"]  # Allow insecure temp file usage in tests

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.12.0",
    "pre-commit>=4.0.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
